@@ -57,23 +57,10 @@ runHelper <- function(model, frontendStart,
 		values=namespace$values, parameters=namespace$parameters))
 	defVars <- generateDefinitionList(flatModel)
 	model <- convertDatasets(model, defVars, model@options)
-	translation <- translateObjectives(model, namespace, flatModel)
-	if (slot(translation, ".estimation")) {
-		estimates <- runHelper(translation, frontendStart, 
-			intervals, silent, suppressWarnings, 
-			unsafe, checkpoint, useSocket)
-		# TODO: begin populate the model with free parameter estimates
-		# TODO: end populate the model with free parameter estimates
-		slot(model, ".postEstimation") <- TRUE 
-		model <- translateObjectives(model, namespace, flatModel)
-		slot(model, ".postEstimation") <- FALSE 
-	} else {
-		model <- translation
-	}
-	# Regenerate the namespace and flatModel
-#	model <- transformAlgebras(model) # algebra transformation is broken
-	namespace <- omxGenerateNamespace(model)
-	flatModel <- omxFlattenModel(model, namespace)
+	triple <- translateObjectives(model, namespace, flatModel)
+	model <- triple[[1]]
+	namespace <- triple[[2]]
+	flatModel <- triple[[3]]
 	freeFixedValues <- omxCheckVariables(flatModel, namespace)
 	oldFlatModel <- flatModel
 	flatModel <- constraintsToAlgebras(flatModel)
