@@ -1,6 +1,7 @@
 trunk
 =====
 * return NA in mxVersion() if "OpenMx" cannot be found
+* eliminate infinite loop in objective function transformations
 
 Release 1.0.2-1497 (November 5, 2010)
 =====================================
